[package]
name = "lair"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio = { version = "0.2.2", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pin-project-lite = "0.2"
bytes = "1.5.0"
http = "1.0.0"
httparse = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
futures = "0.3.30"
sark = "0.1"
